tests/compile-fail/integration__integration__mapfiles__intrinsic_op_output_arg_wrong_type.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic AssignOp(=,int): output arg has unexpected encoding (float)
  ┌─ <mapfile-1>:3:4
  │
3 │ 99 AssignOp(=,int)
  │    ^^^^^^^^^^^^^^^ intrinsic defined here
4 │ !ins_signatures
5 │ 99 fS
  │    ^^ signature defined here


